@@ -143,6 +143,7 @@ sub handler : method
                 {
                     $session{'uid'} = $options{'uid'} = $uid;
                     $needsLogin = 0;
+                    Info('User logged in: ' . $args{'uid'});
                 }
                 else
                 {
